Fix tests. Migrate JavaCTemplates to Java8